[package]
name = "navirad_wasm"
version = "0.1.0"
authors = ["Magnus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlImageElement',
  'ImageBitmap',
  'ImageBitmapFormat',
  'ImageData'
]